--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "dl": "https://crates.io/api/v1/crates",
-  "api": "https://crates.io"
+  "dl": "https://rust-crates-mirror.herokuapp.com/api/v1/crates",
+  "api": "https://rust-crates-mirror.herokuapp.com/"
 }
